@@ -48,6 +48,7 @@ import org.bukkit.craftbukkit.v1_19_R2.inventory.CraftItemStack;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
+import java.util.List;
 
 @EntitySize(width = 0.6F, height = 1.95F)
 public class EntityMyPillager extends EntityMyPet {
@@ -189,7 +190,7 @@ public class EntityMyPillager extends EntityMyPet {
 	}
 
 	public void setPetEquipment(ItemStack itemStack, net.minecraft.world.entity.EquipmentSlot slot) {
-		((ServerLevel) this.level).getChunkSource().broadcastAndSend(this, new ClientboundSetEquipmentPacket(getId(), Arrays.asList(new Pair<>(slot, itemStack))));
+		((ServerLevel) this.level).getChunkSource().broadcastAndSend(this, new ClientboundSetEquipmentPacket(getId(), List.of(new Pair<>(slot, itemStack))));
 		if (slot == net.minecraft.world.entity.EquipmentSlot.MAINHAND) {
 			getEntityData().set(CROSSBOW_WATCHER, itemStack.getItem() == Items.CROSSBOW);
 		}
