@@ -47,6 +47,7 @@ import org.bukkit.Bukkit;
 import org.bukkit.craftbukkit.v1_21_R4.inventory.CraftItemStack;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 @EntitySize(width = 0.6F, height = 0.8F)
@@ -188,7 +189,7 @@ public class EntityMyFox extends EntityMyPet {
 	}
 
 	public void setPetEquipment(ItemStack itemStack) {
-		((ServerLevel) this.level()).getChunkSource().broadcastAndSend(this, new ClientboundSetEquipmentPacket(getId(), Arrays.asList(new Pair<>(net.minecraft.world.entity.EquipmentSlot.MAINHAND, itemStack))));
+		((ServerLevel) this.level()).getChunkSource().broadcastAndSend(this, new ClientboundSetEquipmentPacket(getId(), List.of(new Pair<>(net.minecraft.world.entity.EquipmentSlot.MAINHAND, itemStack))));
 	}
 
 	@Override
